--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vue-sweetalert2": "^1.6.4",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
