--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.6.4",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
