--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "aws-amplify": "^1.1.40",
     "aws-amplify-vue": "^0.2.17",
-    "../utils/axios.js": "^0.18.0",
+    "axios.js": "^0.18.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.6.4",
