--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.6.4",
     "vuelidate": "^0.7.4",
+    "vuesax": "^3.11.0",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
